fix: remove html overflow-x

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 @layer base {
   html {
-    @apply overflow-x-hidden;
+    /*@apply overflow-x-hidden;*/
   }
 
   body {
